--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Navigasi-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">SUMATERTOUR</a>
+        <a class="navbar-brand" href="/">SUMATERTOUR</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
